--- a/index.htm
+++ b/index.htm
@@ -114,7 +114,7 @@
     </div>
     <div id="indexSlides_4">
       <div class="container">
-        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
+        <a href="https://tsejunzhen.github.io/Project_OIA/news.htm" >
             <div class="icon_bg2"></div>
             <div class="icon_label_2">系所資訊</div>
         </a>
@@ -122,11 +122,11 @@
             <div class="icon_bg3"></div>
             <div class="icon_label_3">住宿資訊</div>
         </a>
-        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
+        <a href="https://tsejunzhen.github.io/Project_OIA/IS.htm" >
           <div class="icon_bg4"></div>
           <div class="icon_label_4">簽證資訊</div>
         </a>
-        <a href="https://tsejunzhen.github.io/Project_OIA/index.htm" >
+        <a href="https://tsejunzhen.github.io/Project_OIA/news.htm" >
           <div class="icon_bg1"></div>
           <div class="icon_label_1">招生資訊</div>
         </a>
