--- a/OCS.htm
+++ b/OCS.htm
@@ -12,34 +12,37 @@
   <body>
         <ul id="indexSlides_1">
           <div class="container">
-          <a href="tsejunzhen.github.io/Project_OIA/" class="logo"></a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/" class="logo"></a>
 
-            <a href="tsejunzhen.github.io/Project_OIA/">
+            <a href="https://tsejunzhen.github.io/Project_OIA/">
             <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
             </a>
-            <a href="tsejunzhen.github.io/Project_OIA/">
+            <a href="https://tsejunzhen.github.io/Project_OIA/">
             <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
             </a>
-            <a href="tsejunzhen.github.io/Project_OIA/about.htm">
+            <a href="https://tsejunzhen.github.io/Project_OIA/about.htm">
             <div class="world_about">關於我們</div>
             </a>
-            <a href="tsejunzhen.github.io/Project_OIA/news.htm">
+            <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
           <div class="world_new">最新消息</div>
         </a>
-        <a href="tsejunzhen.github.io/Project_OIA/guide.htm">
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
           <div class="world_guide">實用指南</div>
         </a>
-        <a href="tsejunzhen.github.io/Project_OIA/exchange.htm">
+        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
           <div class="world_axchange">交換學生</div>
         </a>
-        <a href="tsejunzhen.github.io/Project_OIA/contact.htm">
+        <a href="https://tsejunzhen.github.io/Project_OIA/contact.htm">
           <div class="world_contact">聯絡我們</div>
         </a>
-        <a href="tsejunzhen.github.io/Project_OIA/OCS">
-          <div class="world_main_ch">國立台北科技大學國際事務處</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/OCS">
+          <div class="world_main_ch">G U I D E</div>
+            <p class="world_main_ch_p">G U I D E</p>
+
         </a>
-        <a href="tsejunzhen.github.io/Project_OIA/OCS">
-          <div class="world_main_en">Office of International Affairs,Taipei Tech</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/OCS">
+          <div class="world_main_en">實用指南</div>
+                  <p class="world_main_en_p">實用指南</p>
         </a>
         </ul>
     </div>
@@ -70,7 +73,7 @@
 
 <!--123-->
 <div class="text">外籍生獎學金</div><br>
-      <button class="panel-heading_1" id="button_1"><span><a href="http://www.computerhope.com" style="text-decoration: none" ><font color="white">臺灣獎學金</a></span></button>
+      <button class="panel-heading_1" id="button_1"><span><a href="#" style="text-decoration: none" ><font color="white">臺灣獎學金</a></span></button>
       <div id="wrapper_1" class="open_1">
       <ul id="list_1">
         <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
@@ -86,7 +89,7 @@
 </ul>
         </div>
 
-      <button class="panel-heading_2" id="button_2"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
+      <button class="panel-heading_2" id="button_2"><span><a href="#" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
       <div id="wrapper_2" class="open_2">
       <ul id="list_2">
         <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
@@ -102,7 +105,7 @@
     </ul>
       </div>
 
-      <button class="panel-heading_3" id="button_3"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">陸生</a></span></button>
+      <button class="panel-heading_3" id="button_3"><span><a href="#" style="text-decoration: none"><font color="white">陸生</a></span></button>
         <div id="wrapper_3" class="open_3">
             <ul id="list_3">
               <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
@@ -119,7 +122,7 @@
       </div>
       <br><br><br>
 <div class="text">僑生(含港澳生)獎學金</div><br>
-      <button class="panel-heading_4" id="button_4"><span><a href="http://www.computerhope.com" style="text-decoration: none"><font color="white">獎學金</a></span></button>
+      <button class="panel-heading_4" id="button_4"><span><a href="#" style="text-decoration: none"><font color="white">獎學金</a></span></button>
   <div id="wrapper_4" class="open_4">
         <ul id="list_4">
           <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
