--- a/news.htm
+++ b/news.htm
@@ -12,34 +12,34 @@
   <body>
         <ul id="indexSlides_1">
           <div class="container">
-          <a href="http://google.com" class="logo"></a>
+          <a href="https://tsejunzhen.github.io/Project_OIA/" class="logo"></a>
 
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/">
             <div class="logo_world_ch">國立臺北科技大學國際事務處</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/">
             <div class="logo_world_en">Office of International Affairs, Taipei Tech</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/about.htm">
             <div class="world_about">關於我們</div>
             </a>
-            <a href="http://google.com">
+            <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
           <div class="world_new">最新消息</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
           <div class="world_guide">實用指南</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
           <div class="world_axchange">交換學生</div>
         </a>
-        <a href="http://google.com">
+        <a href="https://tsejunzhen.github.io/Project_OIA/contact.htm">
           <div class="world_contact">聯絡我們</div>
         </a>
-        <a href="http://google.com">
-          <div class="world_main_ch">國立台北科技大學國際事務處</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
+          <div class="world_main_ch">NEWS</div>
         </a>
-        <a href="http://google.com">
-          <div class="world_main_en">Office of International Affairs,Taipei Tech</div>
+        <a href="https://tsejunzhen.github.io/Project_OIA/news.htm">
+          <div class="world_main_en">最新消息</div>
         </a>
         </ul>
     </div>
@@ -86,19 +86,25 @@
           </div>
     <div class="img_5"></div>
       <div class="border_5"></div>
-      <div class="text_5">Student Portal is available for new students to log!
+      <div class="text_5">Student Portal is available for new students to log in!
       <br><br>2016-08-25
       </div>
 
   </div><!--container-->
 </div><!--indexSlides_3-->
 
-    <footer id="foother_slides">
-      <div class="container">
-      <div class="footer_map"></div>
-      <div class="footer_bg_white"></div>
-      </div><!--container-->
-    </footer><!--indexSlides_3-->
+<footer id="foother_slides">
+  <div class="container">
+  <div class="footer_map"></div>
+  <div class="footer_bg_white"></div>
+  <p class ="footer_label" >國立臺北科技大學國際事務處<br>
+                           10608 台北市大安區忠孝東路三段一號（第二教學大樓一樓）<br>
+                           TEL：886-2-2771-2171#6500<br>
+                           FAX：886-2-8773-1879<br>
+                           E-mail：intstudy@ntut.edu.tw
+  </p>
+  </div>
+</footer>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
         <script src="js/indexjs.js"></script>
