--- a/OCS.htm
+++ b/OCS.htm
@@ -72,69 +72,48 @@
       <div class="panel_group">
 
 <!--123-->
-<div class="text">外籍生獎學金</div><br>
+<div class="text">單獨招生 流程圖</div><br>
       <button class="panel-heading_1" id="button_1"><span><a href="#" style="text-decoration: none" ><font color="white">臺灣獎學金</a></span></button>
       <div id="wrapper_1" class="open_1">
       <ul id="list_1">
-        <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body2">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body3">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body4">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body5">·單獨招生</div>
-        <div class="panel_body6">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body7">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body8">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body9">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body10">·流程圖海外聯招</div>
+        <div class="panel_body1">重要時間表</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body2">招生名額及科系</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body3">招生簡章</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body4">線上報名</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body5">上傳審查資料</div>
+        <div class="panel_body6">申請件審查</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body7">錄取名單公佈</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body8">錄取通知書寄發</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body9">就讀意願聲明書</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body10">註冊及報到</div>
 </ul>
         </div>
 
-      <button class="panel-heading_2" id="button_2"><span><a href="#" style="text-decoration: none"><font color="white">國立臺北科技大學外國籍學生獎學金</a></span></button>
+      <button class="panel-heading_2" id="button_2"><span><a href="#" style="text-decoration: none"><font color="white">海外聯招 流程圖</a></span></button>
       <div id="wrapper_2" class="open_2">
       <ul id="list_2">
-        <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body2">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body3">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body4">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body5">·單獨招生</div>
-        <div class="panel_body6">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body7">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body8">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body9">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-        <div class="panel_body10">·流程圖海外聯招</div>
+        <div class="panel_body1">重要時程表</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body2">查詢海聯招生簡章</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body3">登錄填寫志願</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body4">報名送件</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body5">分發結果公佈</div>
+        <div class="panel_body6">錄取通知書寄發</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body7">就讀意願</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body8">註冊須知</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body9">學號公佈</div><a href="#" style="text-decoration: none"><font color="green">></a>
+        <div class="panel_body10">報到</div>
     </ul>
       </div>
 
-      <button class="panel-heading_3" id="button_3"><span><a href="#" style="text-decoration: none"><font color="white">陸生</a></span></button>
-        <div id="wrapper_3" class="open_3">
-            <ul id="list_3">
-              <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body2">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body3">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body4">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body5">·單獨招生</div>
-              <div class="panel_body6">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body7">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body8">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body9">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-              <div class="panel_body10">·流程圖海外聯招</div>
-  </ul>
-      </div>
       <br><br><br>
-<div class="text">僑生(含港澳生)獎學金</div><br>
-      <button class="panel-heading_4" id="button_4"><span><a href="#" style="text-decoration: none"><font color="white">獎學金</a></span></button>
+<div class="text">其他</div><br>
+      <button class="panel-heading_4" id="button_4"><span><a href="#" style="text-decoration: none"><font color="white">抵臺前必讀重要資訊</a></span></button>
   <div id="wrapper_4" class="open_4">
         <ul id="list_4">
-          <div class="panel_body1">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body2">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body3">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body4">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body5">·單獨招生</div>
-          <div class="panel_body6">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body7">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body8">·流程圖海外聯招</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body9">·單獨招生</div><a href="#" style="text-decoration: none"><font color="green">></a>
-          <div class="panel_body10">·流程圖海外聯招</div>
+          <div class="panel_body1">行事曆</div><a href="#" style="text-decoration: none"></a>
+          <div class="panel_body2">註冊需知</div><a href="#" style="text-decoration: none"></a>
+          <div class="panel_body3">新生資訊指南</div><a href="#" style="text-decoration: none"></a>
+
   </ul>
       </div>
 
