--- a/exchange.htm
+++ b/exchange.htm
@@ -78,20 +78,20 @@
     <div class="container">
 
 
-          <a href="https://tsejunzhen.github.io/Project_OIA/OCS.htm">
+          <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
           <div class="box01">
               <div class="transparent1"></div>
               <div class="pic01"></div>
                   <div class="transparent"></div>
               <p class="label_01">PARTNER UNIVERSITY</p>
           </a>
-                  <a href="https://tsejunzhen.github.io/Project_OIA/guide.htm">
+                  <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
                     <div class="box02">
                       <div class="pic02"></div>
                           <div class="transparent"></div>
                       <p class="label_02">APPLICATION</p>
                   </a>
-                        <a href="https://www.ntut.edu.tw/ezfiles/21/1021/img/1304/newBig01-13-2014.jpg">
+                        <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
                           <div class="box03">
                               <div class="transparent1"></div>
                             <div class="pic03"></div>
@@ -102,21 +102,21 @@
                     </div>
             </div>
 
-      <a href="https://tsejunzhen.github.io/Project_OIA/scholarships.htm">
+      <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
           <div class="box11">
               <div class="transparent1"></div>
               <div class="pic11"></div>
                   <div class="transparent"></div>
               <p class="label_11">ALLOWANCE</p>
             </a>
-              <a href="https://nportal.ntut.edu.tw/index.do?thetime=1412421457275">
+              <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
                 <div class="box12">
                     <div class="transparent1"></div>
                   <div class="pic12"></div>
                       <div class="transparent"></div>
                   <p class="label_12">DOCUMENT DOWNLOAD</p>
               </a>
-                <a href="https://webmail.ntut.edu.tw/index_p.html#1">
+                <a href="https://tsejunzhen.github.io/Project_OIA/exchange.htm">
                   <div class="box13">
                       <div class="transparent1"></div>
                     <div class="pic13"></div>
